--- a/bemfazer.html
+++ b/bemfazer.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="capa">
         <div class="imagem">
-            <img src="Capa.png">
+            <img src="https://i.im.ge/2023/09/26/N9XWEc.Capa.png">
         </div>
     </nav>
 
@@ -17,7 +17,7 @@
         <p class="titulo0">CÍNTIA PERRI</p>
         <p class="titulo1">(função aqui)</p>
         <div class="bola">
-            <img src="Cintia.png">
+            <img src="https://i.im.ge/2023/09/26/N9X8M0.Cintia.png">
         </div>
     </nav>
 
