--- a/bemfazer.html
+++ b/bemfazer.html
@@ -5,6 +5,105 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Bem Fazer</title>
+    <style>
+        body{
+    max-width: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.titulo{
+    font-weight: bold;
+    font-size: 25px;
+    margin-left: 60px;
+    max-width: 100%;
+    
+}
+
+.titulo0{
+    font-weight: bold;
+    font-size: 25px;
+    margin-left: 70px;
+    max-width: 100%;
+    background: linear-gradient(to right, #ffcc00, #ff3366); /* Defina as cores do seu degradê aqui */
+    -webkit-background-clip: text;
+    color: transparent;
+}
+
+.titulo1{
+    font-weight: bold;
+    font-size: 15px;
+    margin-left: 70px;
+    margin-top: -20px;
+    max-width: 100%;
+}
+
+.bola {
+    max-width: 100%;
+    background-color: red;
+    height:120px;
+    width: 120px;
+    margin-left: -65px;
+    margin-top: -100px;
+    border-radius: 100px;
+    overflow: hidden;
+}
+
+.bola img {
+    width: 100%; /* Garante que a imagem preencha todo o círculo */
+    height: 100%; /* Garante que a imagem preencha todo o círculo */
+    object-fit: cover; /* Mantém a proporção da imagem e a ajusta ao tamanho da div */
+    max-width: 100%;
+  }
+
+.sobre{
+    font-weight: bold;
+    font-size: 20px;
+    margin-left: 75px;
+    margin-top: 30px;
+    max-width: 100%;
+}
+
+.barra{
+    width: 72px;
+    height: 2px;
+    background-color: #ff3366;
+    margin-left: 75px;
+    margin-top: -10px;
+    background: linear-gradient(to right, #ffcc00, #ff3366); /* Defina as cores do seu degradê aqui */
+}
+
+.sobre1 {
+    font-weight: normal;
+    font-size: 18px;
+    margin-left: -55px;
+    text-indent: 8px;
+}
+
+.sobre2 {
+    font-weight: normal;
+    font-size: 18px;
+    margin-left: -55px;
+    text-indent: 8px;
+}
+
+.sobre3 {
+    font-weight: normal;
+    font-size: 18px;
+    margin-left: -55px;
+    text-indent: 8px;
+}
+
+.sobre4 {
+    font-weight: normal;
+    font-size: 18px;
+    margin-left: -55px;
+    text-indent: 8px;
+}
+
+.sobre p {
+    margin-bottom: 10px; /* Define um espaçamento de 10 pixels entre os parágrafos */
+  }
+    </style>
 </head>
 <body>
     <nav class="capa">
