--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         body{
     max-width: 100%;
     font-family: Arial, Helvetica, sans-serif;
+    margin: 0 auto; /* Define margens superior e inferior como 0 e as margens esquerda e direita como automáticas */
+    text-align: start;
 }
 
 .titulo{
@@ -24,7 +26,7 @@
     font-size: 25px;
     margin-left: 70px;
     max-width: 100%;
-    background: linear-gradient(to right, #ffcc00, #ff3366); /* Defina as cores do seu degradê aqui */
+    background: linear-gradient(to right, #ABA4E4, #9187e0); /* Defina as cores do seu degradê aqui */
     -webkit-background-clip: text;
     color: transparent;
 }
@@ -64,15 +66,17 @@
 }
 
 .barra{
+    max-width: 100%;
     width: 72px;
     height: 2px;
     background-color: #ff3366;
     margin-left: 75px;
     margin-top: -10px;
-    background: linear-gradient(to right, #ffcc00, #ff3366); /* Defina as cores do seu degradê aqui */
+    background: linear-gradient(to right, #ABA4E4, #9187e0); /* Defina as cores do seu degradê aqui */
 }
 
 .sobre1 {
+    max-width: 100%;
     font-weight: normal;
     font-size: 18px;
     margin-left: -55px;
@@ -80,6 +84,7 @@
 }
 
 .sobre2 {
+    max-width: 100%;
     font-weight: normal;
     font-size: 18px;
     margin-left: -55px;
@@ -87,6 +92,7 @@
 }
 
 .sobre3 {
+    max-width: 100%;
     font-weight: normal;
     font-size: 18px;
     margin-left: -55px;
@@ -94,6 +100,7 @@
 }
 
 .sobre4 {
+    max-width: 100%;
     font-weight: normal;
     font-size: 18px;
     margin-left: -55px;
@@ -101,37 +108,49 @@
 }
 
 .sobre p {
+    max-width: 100%;
     margin-bottom: 10px; /* Define um espaçamento de 10 pixels entre os parágrafos */
-  }
+}
 
 .criacoes{
+    max-width: 100%;
     font-weight: bold;
     font-size: 20px;
-    margin-left: 130px;
+    margin-left: 140px;
     margin-top: 30px;
     max-width: 100%;
 }
 
 .barra1{
+    max-width: 100%;
     width: 108px;
     height: 2px;
     background-color: #ff3366;
-    margin-left: 130px;
+    margin-left: 140px;
     margin-top: -10px;
-    background: linear-gradient(to right, #ffcc00, #ff3366); /* Defina as cores do seu degradê aqui */
+    background: linear-gradient(to right, #ABA4E4, #9187e0); /* Defina as cores do seu degradê aqui */
 }
 
 .criado{
+    max-width: 100%;
     font-weight: normal;
     font-size: 18px;
     text-indent: 8px;
-    margin-left: 25px;
+    margin-left: 20px;
+}
+
+.criado1{
+    max-width: 100%;
+    font-weight: normal;
+    font-size: 18px;
+    text-indent: 8px;
+    margin-left: 110px;
 }
 
 #caixa {
     width: 250px;
     height: 240px;
-    background: linear-gradient(to right, #ffcc00, #ff3366); /* Defina as cores do seu degradê aqui */
+    background: linear-gradient(to right, #ABA4E4, #9187e0); /* Defina as cores do seu degradê aqui */
     margin: 15px auto 0 auto;
     border: none;
     display: flex;
@@ -179,7 +198,7 @@
     background-color: #ff3366;
     margin-left: 88px;
     margin-top: -10px;
-    background: linear-gradient(to right, #ffcc00, #ff3366); /* Defina as cores do seu degradê aqui */
+    background: linear-gradient(to right, #ABA4E4, #9187e0); /* Defina as cores do seu degradê aqui */
 }
 
 .para {
@@ -194,7 +213,7 @@
     font-size: 20px;
     text-indent: 8px;
     margin-left: 72px;
-    background: linear-gradient(to right, #ffcc00, #ff3366); /* Defina as cores do seu degradê aqui */
+    background: linear-gradient(to right, #ABA4E4, #9187e0); /* Defina as cores do seu degradê aqui */
     -webkit-background-clip: text;
     color: transparent;
 }
@@ -209,7 +228,7 @@
 .botao1 {
     display: inline-block;
     padding: 10px 20px;
-    background: linear-gradient(to right, #ffcc00, #ff3366);
+    background: linear-gradient(to right, #ABA4E4, #9187e0);
     color: #fff;
     text-decoration: none;
     border-radius: 5px;
@@ -218,8 +237,11 @@
 }
 
 .botao1:hover {
-    background: linear-gradient(to right, #ffcc00, #ff3366);
+    background: linear-gradient(to right, #ABA4E4, #9187e0);
 }
+
+
+
         
         
     </style>
@@ -242,10 +264,10 @@
     <nav class="sobre">
         <p class="sobre">SOBRE</p>
         <div class="barra"></div>
-        <p class="sobre1"> Os monstrinhos surgiram como uma ideia para fazer companhia à mãe que estava doente e acamada.</p>
-        <p class="sobre2">A intenção era criar algo com as próprias mãos, repleto de amor. A mãe participava ativamente do processo de criação, enchendo os monstrinhos e acompanhando cada etapa.
-        <p class="sobre3">Quando os monstrinhos estavam prontos, eram colocados em uma cesta. Quando a cesta ficava cheia, eles eram doados a crianças necessitadas que não tinham brinquedos. A mãe expressava grande alegria ao ver as crianças sorrindo com os monstrinhos. 
-        <p class="sobre4">Em 2017, o projeto ganhou apoio da comunidade local e continuou a espalhar alegria através das doações dos monstrinhos.</p></p>
+        <p class="sobre1"> Os monstrinhos nasceram na minha vida para fazer companhia a minha mãe que se encontrava  acamada.  Precisava fazer companhia com amor, mas muito amor, senão que validade teria? Surgiu a ideia de fazermos algo com as mãos para nos unirmos nesse fase da vida.</p>
+        <p class="sobre2">E assim foi,  minha mae gostava de acompanhar cada uma das etapas da produção dos monstrinhos, ajudava enche-los, e quando ficavam prontos, sempre comentava: -  Esses monstrinhos provocam sorrisos</p>
+        <p class="sobre3">Cada um que ficava pronto colocavamos em uma cesta, e quando ela estava cheia ficavamos sabendo de crianças que nao tinham brinquedos, e lá se ia toda nossa produçao.</p>
+        <p class="sobre4">E ainda posso ouvir ela dizendo sinto uma alegria tao grande quando entregamos os monstrinhos, imaginos os sorrisos.Em 2017 o projeto foi abraçado pela ribeirania, e com ajuda de todos  seguimos em busca de MUITOS sorrisos.</p>
     </nav>
 
     <nav class="monstrinhos">
