Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 
     <nav class="titulo">
         <p class="titulo0">CÍNTIA PERRI</p>
-        <p class="titulo1">(função aqui)</p>
+        <p class="titulo1">Coordenadora de projetos</p>
         <div class="bola">
             <img src="https://i.im.ge/2023/09/26/N9X8M0.Cintia.png">
         </div>
