Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -264,16 +264,16 @@
     <nav class="sobre">
         <p class="sobre">SOBRE</p>
         <div class="barra"></div>
-        <p class="sobre1"> Os monstrinhos nasceram na minha vida para fazer companhia a minha mãe que se encontrava  acamada.  Precisava fazer companhia com amor, mas muito amor, senão que validade teria? Surgiu a ideia de fazermos algo com as mãos para nos unirmos nesse fase da vida.</p>
-        <p class="sobre2">E assim foi,  minha mae gostava de acompanhar cada uma das etapas da produção dos monstrinhos, ajudava enche-los, e quando ficavam prontos, sempre comentava: -  Esses monstrinhos provocam sorrisos</p>
-        <p class="sobre3">Cada um que ficava pronto colocavamos em uma cesta, e quando ela estava cheia ficavamos sabendo de crianças que nao tinham brinquedos, e lá se ia toda nossa produçao.</p>
-        <p class="sobre4">E ainda posso ouvir ela dizendo sinto uma alegria tao grande quando entregamos os monstrinhos, imaginos os sorrisos.Em 2017 o projeto foi abraçado pela ribeirania, e com ajuda de todos  seguimos em busca de MUITOS sorrisos.</p>
+        <p class="sobre1"> Os monstrinhos nasceram na minha vida para fazer companhia a minha mãe que se encontrava  acamada.  Precisava fazer companhia com amor, mas muito amor, senão que validade teria? Assim,surgiu a ideia de fazermos algo com as mãos para nos unir nesse fase da vida.</p>
+        <p class="sobre2">E assim foi. Minha mãe gostava de acompanhar cada uma das etapas da produção dos monstrinhos, ajudava enchê-los e, quando ficavam prontos, sempre comentava: -  Esses monstrinhos provocam sorrisos</p>
+        <p class="sobre3">Cada um que ficava pronto era colocado em uma cesta, e quando ela estava cheia, ficávamos sabendo de crianças que nao tinham brinquedos, e lá se ia toda nossa produçao.</p>
+        <p class="sobre4">E ainda posso ouvi-la dizendo: Sinto uma alegria tão grande quando entregamos os monstrinhos, imaginos os sorrisos.Em 2017 o projeto foi abraçado pela Ribeirânia, e com ajuda de todos  seguimos em busca de MUITOS sorrisos.</p>
     </nav>
 
     <nav class="monstrinhos">
         <p class="criacoes">CRIAÇÕES</p>
         <div class="barra1"></div>
-        <p class="criado">Nós criamos várias versões de monstrinhos, e aqui está alguns!</p>
+        <p class="criado">Nós criamos várias versões de monstrinhos, e aqui estão algumas!</p>
         <div id="caixa">
             <div><img src="https://i.im.ge/2023/09/26/N9aT0K.bixo-1.jpg"></div>
             <div><img src="https://i.im.ge/2023/09/26/N9aDMP.bixo2.jpg"></div>
@@ -286,7 +286,7 @@
     <nav class="botao">
         <p class="criar">CRIAR MONSTRINHO</p>
         <div class="barra2"></div>
-        <p class="para">Neste botão, você poderá criar um monstrinho do seu jeito para ser doado a uma outra criança.</p>
+        <p class="para">Neste botão, você poderá criar um monstrinho do seu jeito para ser doado a uma criança.</p>
         <p class="para1">ISSO NÃO É INCRÍVEL?!</p>
         <p class="para2"> Vamos lá, aperte o botão para ser redirecionado para a página de criação</p>
         <a href="https://projetobemfazer.github.io/createmonsters/monstrinho.html" class="botao1">Clique aqui</a>
